# platform.core.api.system-info

./: AUTHORS  CMakeLists.txt  LICENSE.RFC4122  NOTICE  capi-system-info-plugin.pc.in  capi-system-info.pc.in  project.config
configuration/: sys-info.xml  sys-info_.xml
debian/: changelog  control  rules
doc/: system_info_doc.h
include/: system_info.h  system_info_doc.h  system_info_intf.h  system_info_private.h  system_info_tizen_prop.h  system_info_type.h
packaging/: capi-system-info-n4.spec  capi-system-info-tm1.spec  capi-system-info.changes  capi-system-info.manifest  capi-system-info.spec  tizenid.service
plugin_sample/: CMakeLists.txt  plugin.c
plugin_sample/packaging/: system-info-external-plugin.spec
script/: make_info_file.sh  tizen_prop.sh
src/: .system_info.c.swp  system_info.c  system_info_device.c  system_info_external.c  system_info_file.c  system_info_hardware.c  system_info_network.c  system_info_no_file.c  system_info_parse.c  system_info_platform.c  system_info_screen.c  system_info_vconf.c
src/init_db/: CMakeLists.txt  system_info_db_init.c
src/tizenid/: .CMakeLists.txt.swp  CMakeLists.txt  tizenid.c  tizenid.service.in
src/update_db/: CMakeLists.txt  system_info_db_update.c
