CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(SYSINFO_PLUGIN system-info-external-plugin)
SET(SRCS plugin.c)

INCLUDE(FindPkgConfig)
pkg_check_modules(${SYSINFO_PLUGIN} REQUIRED
		dlog
		capi-system-info-plugin
)

FOREACH(flag ${${SYSINFO_PLUGIN}_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_LIBRARY(${SYSINFO_PLUGIN} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${SYSINFO_PLUGIN} ${${SYSINFO_PLUGIN}_LDFLAGS})
INSTALL(TARGETS ${SYSINFO_PLUGIN} DESTINATION lib COMPONENT RuntimeLibraries)
