CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(UPDATE_DB "system_info_update_db")

SET(SRCS ${CMAKE_SOURCE_DIR}/src/update_db/system_info_db_update.c)
INCLUDE_DIRECTORIES(include)

SET(BUILD_SHARED_LIBRARIES OFF)
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -g")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -static")

ADD_EXECUTABLE(${UPDATE_DB} ${SRCS})
TARGET_LINK_LIBRARIES(${UPDATE_DB})
INSTALL(TARGETS ${UPDATE_DB} DESTINATION bin)
